--- a/programs/convert.ipynb
+++ b/programs/convert.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is Text-Fabric 7.6.3\n",
+      "This is Text-Fabric 7.7.1\n",
       "Api reference : https://annotation.github.io/text-fabric/Api/Fabric/\n",
       "\n",
       "10 features found and 0 ignored\n"
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,14 +238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "otext = {\n",
     "    'fmt:text-orig-full': '{letters}{punc} ',\n",
+    "    'fmt:line-term': 'line#{terminator} ',\n",
+    "    'fmt:line-default': '{letters:XXX}{terminator} ',\n",
     "    'sectionTypes': 'book,chapter,sentence',\n",
     "    'sectionFeatures': 'title,number,number',\n",
+    "    'structureTypes': 'book,chapter,sentence,line',\n",
+    "    'structureFeatures': 'title,number,number,number',\n",
     "}"
    ]
   },
@@ -263,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -510,6 +514,8 @@
       "   |   SECTION TYPES:    book, chapter, sentence\n",
       "   |   SECTION FEATURES: title, number, number\n",
       "   |   TEXT    FEATURES:\n",
+      "   |      |   line-default         letters, terminator\n",
+      "   |      |   line-term            terminator\n",
       "   |      |   text-orig-full       letters, punc\n",
       "   |     0.00s OK\n",
       "   |     0.00s Following director... \n",
@@ -527,9 +533,9 @@
       "   |        119 nodes of all types\n",
       "   |     0.01s OK\n",
       "   |     0.00s Removing unlinked nodes ... \n",
-      "   |      |    1m 03s      2 unlinked \"sentence\" nodes: [1, 4]\n",
-      "   |      |    1m 03s      2 unlinked nodes\n",
-      "   |      |    1m 03s Leaving    117 nodes\n",
+      "   |      |     0.00s      2 unlinked \"sentence\" nodes: [1, 4]\n",
+      "   |      |     0.00s      2 unlinked nodes\n",
+      "   |      |     0.00s Leaving    117 nodes\n",
       "   |     0.00s checking for nodes and edges ... \n",
       "   |     0.00s OK\n",
       "   |     0.00s checking features ... \n",
@@ -542,13 +548,13 @@
       "   |     0.00s Max node = 117\n",
       "   |     0.00s OK\n",
       "   |     0.00s reassigning feature values ...\n",
-      "   |      |    1m 03s node feature \"author\" with 1 node\n",
-      "   |      |    1m 03s node feature \"gap\" with 7 nodes\n",
-      "   |      |    1m 03s node feature \"letters\" with 99 nodes\n",
-      "   |      |    1m 03s node feature \"number\" with 17 nodes\n",
-      "   |      |    1m 03s node feature \"punc\" with 17 nodes\n",
-      "   |      |    1m 03s node feature \"terminator\" with 12 nodes\n",
-      "   |      |    1m 03s node feature \"title\" with 1 node\n",
+      "   |      |     0.01s node feature \"author\" with 1 node\n",
+      "   |      |     0.01s node feature \"gap\" with 7 nodes\n",
+      "   |      |     0.01s node feature \"letters\" with 99 nodes\n",
+      "   |      |     0.01s node feature \"number\" with 17 nodes\n",
+      "   |      |     0.01s node feature \"punc\" with 17 nodes\n",
+      "   |      |     0.01s node feature \"terminator\" with 12 nodes\n",
+      "   |      |     0.01s node feature \"title\" with 1 node\n",
       "   |     0.00s OK\n",
       "  0.00s Exporting 8 node and 1 edge and 1 config features to /Users/dirk/github/annotation/banks/tf/0.2:\n",
       "  0.00s VALIDATING oslots feature\n",
@@ -574,7 +580,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +628,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-25T13:09:38Z\n",
+      "@dateWritten=2019-05-11T20:09:01Z\n",
       "\n",
       "1-99\tword\n",
       "100\tbook\n",
@@ -647,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -656,6 +662,8 @@
      "text": [
       "@config\n",
       "@compiler=Dirk Roorda\n",
+      "@fmt:line-default={letters:XXX}{terminator} \n",
+      "@fmt:line-term=line#{terminator} \n",
       "@fmt:text-orig-full={letters}{punc} \n",
       "@name=Culture quotes from Iain Banks\n",
       "@purpose=exposition\n",
@@ -663,10 +671,12 @@
       "@sectionTypes=book,chapter,sentence\n",
       "@source=Good Reads\n",
       "@status=with for similarities in a separate module\n",
+      "@structureFeatures=title,number,number,number\n",
+      "@structureTypes=book,chapter,sentence,line\n",
       "@url=https://www.goodreads.com/work/quotes/14366-consider-phlebas\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-25T13:09:38Z\n",
+      "@dateWritten=2019-05-11T20:09:01Z\n",
       "\n",
       "\n"
      ]
@@ -686,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +713,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-25T13:09:38Z\n",
+      "@dateWritten=2019-05-11T20:09:01Z\n",
       "\n",
       "100\t1-99\n",
       "1-55\n",
@@ -753,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +781,7 @@
       "@valueType=int\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-25T13:09:38Z\n",
+      "@dateWritten=2019-05-11T20:09:01Z\n",
       "\n",
       "101\t1\n",
       "2\n",
@@ -824,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +852,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-25T13:09:38Z\n",
+      "@dateWritten=2019-05-11T20:09:01Z\n",
       "\n",
       "Everything\n",
       "about\n",
@@ -970,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +999,7 @@
       "@valueType=str\n",
       "@version=0.2\n",
       "@writtenBy=Text-Fabric\n",
-      "@dateWritten=2019-04-25T13:09:38Z\n",
+      "@dateWritten=2019-05-11T20:09:01Z\n",
       "\n",
       "3\t,\n",
       "6\t,\n",
