--- a/programs/convert.ipynb
+++ b/programs/convert.ipynb
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is Text-Fabric 7.7.2\n",
+      "This is Text-Fabric 7.7.5\n",
       "Api reference : https://annotation.github.io/text-fabric/Api/Fabric/\n",
       "\n",
       "10 features found and 0 ignored\n"
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,6 +490,9 @@
     "    cv.terminate(cur['line'])                     # action\n",
     "    curLine = None\n",
     "    \n",
+    "  # just for informational purposes\n",
+    "  print('\\nINFORMATION:', cv.activeTypes(), '\\n') # action\n",
+    "  \n",
     "  for ntp in ('sentence', 'chapter', 'book'):\n",
     "    cv.terminate(cur[ntp])                        # action\n",
     "\n",
@@ -509,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -526,8 +529,11 @@
       "   |      |   line-default         letters, terminator\n",
       "   |      |   line-term            terminator\n",
       "   |      |   text-orig-full       letters, punc\n",
-      "   |     0.01s OK\n",
+      "   |     0.00s OK\n",
       "   |     0.00s Following director... \n",
+      "\n",
+      "INFORMATION: {'sentence', 'chapter', 'book'} \n",
+      "\n",
       "   |     0.00s \"edge\" actions: 0\n",
       "   |     0.00s \"feature\" actions: 144\n",
       "   |     0.00s \"node\" actions: 20\n",
@@ -542,9 +548,9 @@
       "   |        119 nodes of all types\n",
       "   |     0.01s OK\n",
       "   |     0.00s Removing unlinked nodes ... \n",
-      "   |      |       27s      2 unlinked \"sentence\" nodes: [1, 4]\n",
-      "   |      |       27s      2 unlinked nodes\n",
-      "   |      |       27s Leaving    117 nodes\n",
+      "   |      |    1m 01s      2 unlinked \"sentence\" nodes: [1, 4]\n",
+      "   |      |    1m 01s      2 unlinked nodes\n",
+      "   |      |    1m 01s Leaving    117 nodes\n",
       "   |     0.00s checking for nodes and edges ... \n",
       "   |     0.00s OK\n",
       "   |     0.00s checking features ... \n",
@@ -557,15 +563,16 @@
       "   |     0.00s Max node = 117\n",
       "   |     0.00s OK\n",
       "   |     0.00s reassigning feature values ...\n",
-      "   |      |       27s node feature \"author\" with 1 node\n",
-      "   |      |       27s node feature \"gap\" with 7 nodes\n",
-      "   |      |       27s node feature \"letters\" with 99 nodes\n",
-      "   |      |       27s node feature \"number\" with 17 nodes\n",
-      "   |      |       27s node feature \"punc\" with 17 nodes\n",
-      "   |      |       27s node feature \"terminator\" with 12 nodes\n",
-      "   |      |       27s node feature \"title\" with 1 node\n",
+      "   |      |    1m 01s node feature \"author\" with 1 node\n",
+      "   |      |    1m 01s node feature \"gap\" with 7 nodes\n",
+      "   |      |    1m 01s node feature \"letters\" with 99 nodes\n",
+      "   |      |    1m 01s node feature \"number\" with 17 nodes\n",
+      "   |      |    1m 01s node feature \"punc\" with 17 nodes\n",
+      "   |      |    1m 01s node feature \"terminator\" with 12 nodes\n",
+      "   |      |    1m 01s node feature \"title\" with 1 node\n",
       "   |     0.00s OK\n",
       "  0.00s Exporting 8 node and 1 edge and 1 config features to /Users/dirk/github/annotation/banks/tf/0.2:\n",
+      "  0.00s VALIDATING oslots feature\n",
       "  0.00s VALIDATING oslots feature\n",
       "  0.00s maxSlot=         99\n",
       "  0.00s maxNode=        117\n",
@@ -589,7 +596,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
