--- a/tutorial/repo.ipynb
+++ b/tutorial/repo.ipynb
@@ -1624,7 +1624,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.9",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1638,7 +1638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.0"
   },
   "toc-autonumbering": true
  },
